--- a/02 - Analise exploratoria/AnaliseExploratoria-GasEmissions.ipynb
+++ b/02 - Analise exploratoria/AnaliseExploratoria-GasEmissions.ipynb
@@ -1639,7 +1639,7 @@
     "\n",
     "df_juncao = pd.merge(df_emissions, df_gdp_new, how='left', left_on=['Entity', 'Year'], right_on=['Country Name', 'Year'])\n",
     "df_juncao = df_juncao.dropna()\n",
-    "df_juncao = "
+    "df_juncao"
    ]
   },
   {
