feat: better classification

--- a/02 - Analise exploratoria/iqar-classificacao.ipynb
+++ b/02 - Analise exploratoria/iqar-classificacao.ipynb
@@ -393,73 +393,61 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>co</td>\n",
+       "      <td>6.358942</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Americas</td>\n",
        "      <td>no2</td>\n",
-       "      <td>3.591001</td>\n",
+       "      <td>8.751465</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>7</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Americas</td>\n",
        "      <td>o3</td>\n",
-       "      <td>10.574130</td>\n",
+       "      <td>10.889843</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>8</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Americas</td>\n",
        "      <td>pm10</td>\n",
-       "      <td>11.502125</td>\n",
+       "      <td>28.594598</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>9</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Americas</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>21.930735</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>267</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>so2</td>\n",
-       "      <td>1.031316</td>\n",
-       "      <td>0</td>\n",
+       "      <td>53.205987</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>268 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     DATE   REGION SPECIE  MEAN_BY_CONTINENT  CLASSIFICATION\n",
-       "0    2014   Africa    no2           2.633333               0\n",
-       "1    2014   Africa     o3          10.333333               0\n",
-       "2    2014   Africa   pm10          10.166667               0\n",
-       "3    2014   Africa   pm25          16.333333               0\n",
-       "4    2014   Africa    so2           1.750000               0\n",
-       "..    ...      ...    ...                ...             ...\n",
-       "263  2022  Oceania    no2           3.591001               0\n",
-       "264  2022  Oceania     o3          10.574130               0\n",
-       "265  2022  Oceania   pm10          11.502125               0\n",
-       "266  2022  Oceania   pm25          21.930735               0\n",
-       "267  2022  Oceania    so2           1.031316               0\n",
-       "\n",
-       "[268 rows x 5 columns]"
+       "   DATE    REGION SPECIE  MEAN_BY_CONTINENT  CLASSIFICATION\n",
+       "0  2014    Africa    no2           2.633333               0\n",
+       "1  2014    Africa     o3          10.333333               0\n",
+       "2  2014    Africa   pm10          10.166667               0\n",
+       "3  2014    Africa   pm25          16.333333               0\n",
+       "4  2014    Africa    so2           1.750000               0\n",
+       "5  2014  Americas     co           6.358942               0\n",
+       "6  2014  Americas    no2           8.751465               0\n",
+       "7  2014  Americas     o3          10.889843               0\n",
+       "8  2014  Americas   pm10          28.594598               0\n",
+       "9  2014  Americas   pm25          53.205987               1"
       ]
      },
      "execution_count": 5,
@@ -477,7 +465,7 @@
     "    return filtered.iloc[0]['INDEX']\n",
     "\n",
     "df[\"CLASSIFICATION\"] = df.apply(search_quality, axis=1)\n",
-    "df "
+    "df.head(10)"
    ]
   },
   {
@@ -908,6 +896,26 @@
    ],
    "source": [
     "df[df[\"CLASSIFICATION\"] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "25673b77-86a1-4ad1-8ddc-4a0300f9c94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby(['DATE', 'REGION']).mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f43fb2b5-23ae-4d37-9e9d-3f1449b515f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/air-quality/results/iqar-continents-class-after.csv',index=False)"
    ]
   }
  ],
