fix: classify by continent

--- a/04 - Pesquisa/first-question.ipynb
+++ b/04 - Pesquisa/first-question.ipynb
@@ -225,7 +225,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thiag\\AppData\\Local\\Temp\\ipykernel_37436\\3880152638.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\thiag\\AppData\\Local\\Temp\\ipykernel_20184\\3880152638.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df_emissions = df_emissions.append(df_america)\n"
      ]
     },
@@ -806,7 +806,7 @@
     }
    ],
    "source": [
-    "df = pd.merge(df_iqar, df_emissions,  how='left', on=['REGION','DATE'])\n",
+    "df = pd.merge(df_iqar, df_emissions,  how='inner', on=['REGION','DATE'])\n",
     "df.head(10)"
    ]
   },
@@ -890,101 +890,101 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2021</td>\n",
+       "      <th>20</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Africa</td>\n",
-       "      <td>20.219549</td>\n",
+       "      <td>17.421257</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3.688830e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2021</td>\n",
+       "      <th>21</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Americas</td>\n",
-       "      <td>17.882054</td>\n",
+       "      <td>20.609125</td>\n",
        "      <td>0.166667</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.070009e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2021</td>\n",
+       "      <th>22</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>26.852880</td>\n",
+       "      <td>31.401741</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.545609e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>2021</td>\n",
+       "      <th>23</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Europe</td>\n",
-       "      <td>15.339994</td>\n",
+       "      <td>17.625400</td>\n",
        "      <td>0.166667</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>5.980720e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>2021</td>\n",
+       "      <th>24</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>8.661899</td>\n",
+       "      <td>9.171131</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.049700e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>25</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Africa</td>\n",
-       "      <td>18.849132</td>\n",
+       "      <td>21.350783</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3.745880e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>26</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Americas</td>\n",
-       "      <td>17.503337</td>\n",
+       "      <td>18.699336</td>\n",
        "      <td>0.166667</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.058432e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>27</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>28.375560</td>\n",
+       "      <td>28.082186</td>\n",
        "      <td>0.333333</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.604854e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>28</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Europe</td>\n",
-       "      <td>15.023771</td>\n",
+       "      <td>16.023917</td>\n",
        "      <td>0.166667</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>5.866670e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>29</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>8.554390</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10.065857</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>7.935700e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    DATE    REGION  MEAN_BY_CONTINENT  CLASSIFICATION  EMISSIONS\n",
-       "35  2021    Africa          20.219549        0.333333        NaN\n",
-       "36  2021  Americas          17.882054        0.166667        NaN\n",
-       "37  2021      Asia          26.852880        0.333333        NaN\n",
-       "38  2021    Europe          15.339994        0.166667        NaN\n",
-       "39  2021   Oceania           8.661899        0.000000        NaN\n",
-       "40  2022    Africa          18.849132        0.333333        NaN\n",
-       "41  2022  Americas          17.503337        0.166667        NaN\n",
-       "42  2022      Asia          28.375560        0.333333        NaN\n",
-       "43  2022    Europe          15.023771        0.166667        NaN\n",
-       "44  2022   Oceania           8.554390        0.000000        NaN"
+       "    DATE    REGION  MEAN_BY_CONTINENT  CLASSIFICATION     EMISSIONS\n",
+       "20  2018    Africa          17.421257        0.333333  3.688830e+09\n",
+       "21  2018  Americas          20.609125        0.166667  1.070009e+10\n",
+       "22  2018      Asia          31.401741        0.333333  2.545609e+10\n",
+       "23  2018    Europe          17.625400        0.166667  5.980720e+09\n",
+       "24  2018   Oceania           9.171131        0.000000  8.049700e+08\n",
+       "25  2019    Africa          21.350783        0.333333  3.745880e+09\n",
+       "26  2019  Americas          18.699336        0.166667  1.058432e+10\n",
+       "27  2019      Asia          28.082186        0.333333  2.604854e+10\n",
+       "28  2019    Europe          16.023917        0.166667  5.866670e+09\n",
+       "29  2019   Oceania          10.065857        0.166667  7.935700e+08"
       ]
      },
      "execution_count": 12,
@@ -1508,16 +1508,16 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   21.72</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 28 Nov 2022</td> <th>  Prob (F-statistic):</th> <td>7.01e-05</td>\n",
+       "  <th>Date:</th>             <td>Fri, 02 Dec 2022</td> <th>  Prob (F-statistic):</th> <td>7.01e-05</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:15:42</td>     <th>  Log-Likelihood:    </th> <td>  17.900</td>\n",
+       "  <th>Time:</th>                 <td>23:20:09</td>     <th>  Log-Likelihood:    </th> <td>  12.431</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>    30</td>      <th>  AIC:               </th> <td>  -31.80</td>\n",
+       "  <th>No. Observations:</th>      <td>    30</td>      <th>  AIC:               </th> <td>  -20.86</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    28</td>      <th>  BIC:               </th> <td>  -29.00</td>\n",
+       "  <th>Df Residuals:</th>          <td>    28</td>      <th>  BIC:               </th> <td>  -18.06</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
@@ -1531,10 +1531,10 @@
        "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Intercept</th> <td>    0.1204</td> <td>    0.037</td> <td>    3.254</td> <td> 0.003</td> <td>    0.045</td> <td>    0.196</td>\n",
+       "  <th>Intercept</th> <td>    0.1558</td> <td>    0.043</td> <td>    3.653</td> <td> 0.001</td> <td>    0.068</td> <td>    0.243</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>EMISSIONS</th> <td>  1.39e-11</td> <td> 2.98e-12</td> <td>    4.661</td> <td> 0.000</td> <td> 7.79e-12</td> <td>    2e-11</td>\n",
+       "  <th>EMISSIONS</th> <td>    0.4231</td> <td>    0.091</td> <td>    4.661</td> <td> 0.000</td> <td>    0.237</td> <td>    0.609</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1548,9 +1548,9 @@
        "  <th>Skew:</th>          <td> 0.858</td> <th>  Prob(JB):          </th> <td>   0.150</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 3.305</td> <th>  Cond. No.          </th> <td>1.82e+10</td>\n",
+       "  <th>Kurtosis:</th>      <td> 3.305</td> <th>  Cond. No.          </th> <td>    3.37</td>\n",
        "</tr>\n",
-       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.82e+10. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -1560,28 +1560,26 @@
        "Dep. Variable:         CLASSIFICATION   R-squared:                       0.437\n",
        "Model:                            OLS   Adj. R-squared:                  0.417\n",
        "Method:                 Least Squares   F-statistic:                     21.72\n",
-       "Date:                Mon, 28 Nov 2022   Prob (F-statistic):           7.01e-05\n",
-       "Time:                        21:15:42   Log-Likelihood:                 17.900\n",
-       "No. Observations:                  30   AIC:                            -31.80\n",
-       "Df Residuals:                      28   BIC:                            -29.00\n",
+       "Date:                Fri, 02 Dec 2022   Prob (F-statistic):           7.01e-05\n",
+       "Time:                        23:20:09   Log-Likelihood:                 12.431\n",
+       "No. Observations:                  30   AIC:                            -20.86\n",
+       "Df Residuals:                      28   BIC:                            -18.06\n",
        "Df Model:                           1                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "==============================================================================\n",
        "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "Intercept      0.1204      0.037      3.254      0.003       0.045       0.196\n",
-       "EMISSIONS    1.39e-11   2.98e-12      4.661      0.000    7.79e-12       2e-11\n",
+       "Intercept      0.1558      0.043      3.653      0.001       0.068       0.243\n",
+       "EMISSIONS      0.4231      0.091      4.661      0.000       0.237       0.609\n",
        "==============================================================================\n",
        "Omnibus:                        5.081   Durbin-Watson:                   1.951\n",
        "Prob(Omnibus):                  0.079   Jarque-Bera (JB):                3.796\n",
        "Skew:                           0.858   Prob(JB):                        0.150\n",
-       "Kurtosis:                       3.305   Cond. No.                     1.82e+10\n",
+       "Kurtosis:                       3.305   Cond. No.                         3.37\n",
        "==============================================================================\n",
        "\n",
        "Notes:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The condition number is large, 1.82e+10. This might indicate that there are\n",
-       "strong multicollinearity or other numerical problems.\n",
        "\"\"\""
       ]
      },
@@ -1592,7 +1590,7 @@
    ],
    "source": [
     "import statsmodels.formula.api as smf\n",
-    "model = smf.ols(\"CLASSIFICATION ~ EMISSIONS\", data=df)\n",
+    "model = smf.ols(\"CLASSIFICATION ~ EMISSIONS\", data=df_sklearn)\n",
     "response = model.fit()\n",
     "response.summary()"
    ]
