feat: regex for substitution

--- a/06 - LDA/LDA_GlobalWarming.ipynb
+++ b/06 - LDA/LDA_GlobalWarming.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\thiag\\anaconda3\\lib\\site-packages\\scipy\\sparse\\sparsetools.py:21: DeprecationWarning: `scipy.sparse.sparsetools` is deprecated!\n",
+      "scipy.sparse.sparsetools is a private module for scipy.sparse, and should not be used.\n",
+      "  _deprecated()\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -82,7 +91,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43938</th>\n",
-       "      <td>Dear @realDonaldTrump,\\r\\nYeah right. Human Me...</td>\n",
+       "      <td>Dear @realDonaldTrump,\\nYeah right. Human Medi...</td>\n",
        "      <td>2016-10-26 15:54:32.840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -102,7 +111,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43942</th>\n",
-       "      <td>@Likeabat77 @zachhaller \\r\\n\\r\\nThe wealthy + ...</td>\n",
+       "      <td>@Likeabat77 @zachhaller \\n\\nThe wealthy + foss...</td>\n",
        "      <td>2016-10-26 22:10:22.085</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -118,11 +127,11 @@
        "3      RT @Mick_Fanning: Just watched this amazing do...   \n",
        "4      RT @cnalive: Pranita Biswasi, a Lutheran from ...   \n",
        "...                                                  ...   \n",
-       "43938  Dear @realDonaldTrump,\\r\\nYeah right. Human Me...   \n",
+       "43938  Dear @realDonaldTrump,\\nYeah right. Human Medi...   \n",
        "43939  What will your respective parties do to preven...   \n",
        "43940  RT @MikkiL: UN Poll Shows Climate Change Is th...   \n",
        "43941  RT @taehbeingextra: i still can$q$t believe th...   \n",
-       "43942  @Likeabat77 @zachhaller \\r\\n\\r\\nThe wealthy + ...   \n",
+       "43942  @Likeabat77 @zachhaller \\n\\nThe wealthy + foss...   \n",
        "\n",
        "                          DATE  \n",
        "0      2016-10-31 03:13:07.701  \n",
@@ -140,7 +149,7 @@
        "[43943 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,21 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "tweets = data['MESSAGE']\n",
     "\n",
     "clean_tweets = []\n",
     "\n",
-    "# clear each article\n",
     "for tweet in tweets:\n",
-    "    \n",
-    "    # words that belongs to one of the chosen part of speeches\n",
     "    clean = []\n",
     "    \n",
-    "    # filter and store all words from the chosen part of speech in their basic form\n",
+    "    cleaned_tweet = re.sub('[^\\x00-\\x7F]+', '', tweet)\n",
+    "    cleaned_tweet = re.sub('RT|https:\\/\\/t.co\\/\\w+', '', tweet)\n",
+    "    \n",
     "    for word in nlp(tweet):\n",
     "        if word.pos_ in filters:\n",
     "            clean.append(word.lemma_)\n",
@@ -332,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
